fim da tela inicial

--- a/index.html
+++ b/index.html
@@ -25,40 +25,284 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">Galeria</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
+                  <a class="nav-link" href="#">Contato</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="search" placeholder="Procurar" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Procurar</button>
               </form>
             </div>
           </nav>
         </header>
+
     <div class="principal">
-        <div style="text-align: center;">
-            <h2>Encontre aqui os melhores goleiros da região</h2>
-        </div>
         <div class="container">
             <div class="row">
-            <div class="col-sm">
-            <img class="imagemGoleiro" src="img/goleiro_1.jpg" alt="">
-        </div>
-        <div class="col-sm-6">
-            <h3>Nome: Fulano de tal</h3>
-            <p>status : Disponivel <img style="width: 25px; height: 25px;" src="img/v_verde.png" alt="disponivel"></p>
-            <p>Especialidade: Futsal</p>
-            <p>Avaliação : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
-            <p>Controle com os pés : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
-        </div>
-        <div>
-            <div class="col-sm">
-                <button class="btn2">Favorito</button>
+                <div class="col col-lg">
+                    <h2>Encontre aqui os melhores goleiros da Praia Grande e região</h2>
+                </div>
             </div>
         </div>
+
+        <!--Goleiro 1-->
+        <div class="container div_jogador"> 
+            <div class="row">
+                    <div class="col-sm">
+                        <img class="imagemGoleiro" src="img/goleiro_1.jpg" alt="">
+                    </div>
+
+                <div class="col-sm">
+                    <h3>Nome: Rene da Silva Mello</h3>
+                    <p>status : Disponivel <img style="width: 25px; height: 25px;" src="img/v_verde.png" alt="disponivel"></p>
+                    <p>Especialidade: Futsal</p>
+                    <p>Avaliação : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                    <p>Controle com os pés : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                </div>
+
+                <div>
+                    <div class="col-sm">    
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Detalhes</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Galeria</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Convocar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Goleiro 2-->
+        <div class="container div_jogador">
+            <div class="row">
+                    <div class="col-sm">
+                        <img class="imagemGoleiro" src="img/goleiro_2.jpg" alt="">
+                    </div>
+
+                <div class="col-sm">
+                    <h3>Nome: Davi Figueredo de Lima</h3>
+                    <p>status : Disponivel <img style="width: 25px; height: 25px;" src="img/v_verde.png" alt="disponivel"></p>
+                    <p>Especialidade: Socity</p>
+                    <p>Avaliação : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                    <p>Controle com os pés : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                </div>
+
+                <div>
+                    <div class="col-sm">    
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Detalhes</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Galeria</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Convocar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Goleiro 3-->
+        <div class="container div_jogador">
+            <div class="row">
+                    <div class="col-sm">
+                        <img class="imagemGoleiro" src="img/goleiro_3.jpg" alt="">
+                    </div>
+
+                <div class="col-sm">
+                    <h3>Nome: Davi Figueredo de Lima</h3>
+                    <p>status : Disponivel <img style="width: 25px; height: 25px;" src="img/v_verde.png" alt="disponivel"></p>
+                    <p>Especialidade: Campo</p>
+                    <p>Avaliação : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                    <p>Controle com os pés : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                </div>
+
+                <div>
+                    <div class="col-sm">    
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Detalhes</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Galeria</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Convocar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Goleiro 4-->
+        <div class="container div_jogador">
+            <div class="row">
+                    <div class="col-sm">
+                        <img class="imagemGoleiro" src="img/goleiro_4.jpg" alt="">
+                    </div>
+
+                <div class="col-sm">
+                    <h3>Nome: Rene da Silva Mello</h3>
+                    <p>status : Disponivel <img style="width: 25px; height: 25px;" src="img/v_verde.png" alt="disponivel"></p>
+                    <p>Especialidade: Futsal/Socity</p>
+                    <p>Avaliação : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                    <p>Controle com os pés : 4.5/5 <img style="height: 25px;" src="img/avaliacao_4-5.jpg" alt="avaliacao"></p>
+                </div>
+
+                <div>
+                    <div class="col-sm">    
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Detalhes</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Galeria</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-primary btn-sm btn_jogador_opcao">Convocar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+<footer style="margin-top: 30px;" class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-facebook-f"><img class="img_social" src="img/facebook.png" alt=""></i
+        ></a>
+  
+
+        <!-- Whatsapp -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-google"><img class="img_social" src="img/whatsapp.png" alt=""></i
+        ></a>
+  
+        <!-- Instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-instagram"><img class="img_social" src="img/instagram.png" alt=""></i
+        ></a>
+
+      </section>
+      <!-- Section: Social media -->
+  
+      <!-- Section: Form -->
+      <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Inscreva-se para receber novidade em primeira mão</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-md-5 col-12">
+              <!-- Email input -->
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example21" class="form-control" />
+                <label class="form-label" for="form5Example21">Endereço de Email</label>
+              </div>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-auto">
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-outline-light mb-4">
+                Inscrever-se
+              </button>
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </form>
+      </section>
+      <!-- Section: Form -->
+  
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+            Gostaria de ser um integrante do goleiro de Aluguel? Entre em contato e se inscreva
+            para uma de nossas seletivas.
+        </p>
+      </section>
+      <!-- Section: Text -->
+  
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Apoiadores</h5>
+  
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Rene sla do que</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Mackson Roberto Santos</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white"></a>
+              </li>
+              <li>
+                <a href="#!" class="text-white"></a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+  
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">PATROCINADORES</h5>
+  
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">ESTAMPARIA RENE</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">SPORT CLUB ALEMÃO (ANTIGO DENIS)</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white"></a>
+              </li>
+              <li>
+                <a href="#!" class="text-white"></a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+  
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
     </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      ©2022 Todos os direitos são reservados para:
+      <a class="text-white" href="#">goleirospg.com.br</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 </html>
 
