adicionado videos a galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5">
+    <meta http-equiv="refresh" content="900">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -17,12 +17,12 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">GOLEIRO DE ALUGUEL</a>
+            <a class="navbar-brand" href="../index.html">GOLEIRO DE ALUGUEL</a>
           
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Galeria</a>
@@ -47,6 +47,34 @@
                 </div>
             </div>
         </div>
+
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                        <iframe src="../media/projeto_Futebol.mp4" frameborder="0"></iframe>
+                </div>
+                <div class="col-sm">
+                    <iframe src="../media/projeto_Futebol.mp4" frameborder="0"></iframe>
+                </div>
+                <div class="col-sm">
+                    <iframe src="../media/projeto_Futebol.mp4" frameborder="0"></iframe>
+                 </div>
+                 <div class="col-sm">
+                    <iframe src="../media/projeto_Futebol.mp4" frameborder="0"></iframe>
+                </div>
+                <div class="col-sm">
+                    <iframe src="../media/projeto_Futebol.mp4" frameborder="0"></iframe>
+                </div>
+                <div class="col-sm">
+                    <iframe src="../media/projeto_Futebol.mp4" frameborder="0"></iframe>
+                </div>
+            </div>
+        </div>
+
+
+    </body>
+
 
         <!-- Footer -->
 <footer style="margin-top: 30px;" class="bg-dark text-center text-white">
