--- a/index.html
+++ b/index.html
@@ -304,3 +304,6 @@
   <!-- Footer -->
 </html>
 
+
+     <e><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5270798835849843"
+        crossorigin="anonymous"></script></e>
