--- a/index.html
+++ b/index.html
@@ -307,3 +307,6 @@
 
      <e><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5270798835849843"
         crossorigin="anonymous"></script></e>
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5270798835849843"
+     crossorigin="anonymous"></script>
